--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -50,4 +50,9 @@
   .border-voidfiles-blue {
     border-color: var(--voidfiles-blue);
   }
+  
+  .pattern-dots {
+    background-image: radial-gradient(circle, rgba(255,255,255,0.3) 2px, transparent 2px);
+    background-size: 20px 20px;
+  }
 }
