--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,27 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
   </head>
 
-  <body>
-    <%= yield %>
+  <body class="bg-gradient-to-br from-voidfiles-white to-gray-50 min-h-screen flex flex-col">
+    <%= render 'shared/header' %>
+
+    <main class="flex-1">
+      <% if notice %>
+        <div class="max-w-6xl mx-auto px-6 pt-6">
+          <div class="bg-green-50 border border-green-200 text-green-700 px-4 py-3 rounded-lg mb-4" role="alert">
+            <span class="block sm:inline"><%= notice %></span>
+          </div>
+        </div>
+      <% end %>
+      <% if alert %>
+        <div class="max-w-6xl mx-auto px-6 pt-6">
+          <div class="bg-red-50 border border-red-200 text-red-700 px-4 py-3 rounded-lg mb-4" role="alert">
+            <span class="block sm:inline"><%= alert %></span>
+          </div>
+        </div>
+      <% end %>
+      <%= yield %>
+    </main>
+
+    <%= render 'shared/footer' %>
   </body>
 </html>
