--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,8 +5,11 @@
       <p class="text-gray-300 mb-6">
         <%= t('footer.slogan') %>
       </p>
-      <div class="text-sm text-gray-400">
-        © 2024 VoidFiles. <%= t('footer.tech') %>
+      <div class="text-sm text-gray-400 space-x-4">
+        <span>© 2024 VoidFiles.</span>
+        <span><%= t('footer.tech') %></span>
+        <span>|</span>
+        <%= link_to t('footer.imprint'), imprint_path, class: "hover:text-white transition-colors" %>
       </div>
     </div>
   </div>
